--- a/HL7 Tool Mac/Supporting Files/HL7 Tool-Info.plist
+++ b/HL7 Tool Mac/Supporting Files/HL7 Tool-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>HollyLabs.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>Holly Motherfucking HL7</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -27,7 +27,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2013 Miles Hollingsworth. All rights reserved.</string>
+	<string>Copyright © 2017 Nguyen Bach. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
